<resources>
    <string name="app_name">Smooth Clicker</string>
    <string name="app_sharedUserId">pylapp.smoothclicker.android.sharedUserId</string>
    <string name="app_sharedUserLabel">ID to access to the Smooth Clicker\'s world</string>
    <string name="service_label_serviceclicker">Service Clicker of Smooth Clicker</string>
    <string name="app_name_standalone">Smooth Clicker (standalone)</string>
    <string name="standalone_init_config">Config values are picked &#8230;</string>
    <string name="standalone_init_points">Points to click on are picked &#8230;</string>
    <string name="standalone_start_click_process">The standalone mode is starting &#8230;</string>
    <string name="standalone_bad_action">Woops &#8230;, you did not use a good action to trigger this activity!</string>
    <string name="app_name_ninja">Smooth Clicker (standalone)</string>
    <string name="ninja_init_config">Standalone: Config values are picked &#8230;</string>
    <string name="ninja_init_points">Standalone: Points to click on are picked &#8230;</string>
    <string name="ninja_start_click_process">Standalone: The click process is starting &#8230;</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_clean_points">Delete the selected points</string>
    <string name="action_clean_all">Reset the values and delete the selected points</string>
    <string name="action_export">Export to JSON file</string>
    <string name="action_import">Import from JSON file</string>
    <string name="action_configuration">Configuration</string>
    <string name="action_standalone">Standalone mode</string>
    <string name="info_message_start">Save the configuration and starts the procesus</string>
    <string name="info_message_stop">Stop all process</string>
    <string name="info_message_request_su">Ask for the SU grant</string>
    <string name="info_message_su_granted">The SU authorization has been granted :-)</string>
    <string name="info_message_new_point">Select new points on the screen</string>
    <string name="info_message_invite_new_points">Select several points and then back</string>
    <string name="info_export_success">Export has been made</string>
    <string name="info_export_fail">Export has failed</string>
    <string name="info_import_success">Import has been made</string>
    <string name="info_import_fail">Import has failed</string>
    <string name="info_standalone_activated">The standalone mode will start</string>
    <string name="info_standalone_disactivated">The standalone mode will stop</string>
    <string name="error_message_su_not_granted">The SU authorization has not been granted x-(</string>
    <string name="error_su_missing">Did you root your Android before using this app? It is mandatory.</string>
    <string name="error_message_no_click_defined">¯\\_(ツ)_/¯ No clicks defined</string>
    <string name="error_message_was_not_working">(－‸ლ) The process is not started</string>
    <string name="error_nothing_to_open_json">Woops nothing can open the .json file</string>
    <string name="warning_hazard_repeat_endless_title">Hazardous operation</string>
    <string name="warning_hazard_repeat_endless_content">Are you sure to make an endless repeat? This operation may be hazardous for your device.</string>
    <string name="warning_hazard_repeat_endless_no">Nope!</string>
    <string name="warning_hazard_repeat_endless_yes">Feur frei!</string>
    <string name="widget_type_of_start">Start</string>
    <string name="widget_unit_time">Time</string>
    <string name="widget_unit_time_s">second</string>
    <string name="widget_unit_time_m">minute</string>
    <string name="widget_unit_time_h">hour</string>
    <string name="widget_delay">Delay</string>
    <string name="widget_speed">Time before each click</string>
    <string name="widget_repeat">Repeat</string>
    <string name="widget_repeat_hint">&#8230; times</string>
    <string name="widget_repeat_endless">Endless repeat</string>
    <string name="widget_vibrate_on_start">Vibrate on start</string>
    <string name="widget_vibrate_on_click">Vibrate on click</string>
    <string name="widget_delayed_starts">Delayed</string>
    <string name="widget_immediate_starts">Now</string>
    <string name="widget_xy_coordinates">Points to click on</string>
    <string name="widget_notifications">Notifications</string>
    <string name="widget_standalone_dialog_title">Standalone mode</string>
    <string name="credits_app_label">Smooth Clicker</string>
    <string name="credits_app_desc">App made by pylapp</string>
    <string name="credits_app_url">https://github.com/pylapp/SmoothClicker</string>
    <string name="credits_app_license">Under License MIT</string>
    <string name="credits_app_personal_page">https://twitter.com/pylapp</string>
    <string name="credits_logo_label">Application logo</string>
    <string name="credits_logo_desc">Icon made by Freepik from www.flaticon.com</string>
    <string name="credits_logo_url">http://www.flaticon.com/free-icon/small-monkey-with-long-tail_28726#term=monkey</string>
    <string name="credits_logo_license">Under Flaticon Basic License</string>
    <string name="credits_mam_label">Material Arc Menu</string>
    <string name="credits_mam_desc">Library made by Saurabh Arora</string>
    <string name="credits_mam_url">https://github.com/saurabharora90/MaterialArcMenu</string>
    <string name="credits_mam_license">Under License Apache v2</string>
    <string name="credits_switchbutton_label">SwitchButton</string>
    <string name="credits_switchbutton_desc">Library made by kyleduo</string>
    <string name="credits_switchbutton_url">https://github.com/kyleduo/SwitchButton</string>
    <string name="credits_switchbutton_license">Under License Apache v2</string>
    <string name="credits_appintro_label">AppIntro</string>
    <string name="credits_appintro_desc">Library made by Paolo Rotolo</string>
    <string name="credits_appintro_url">https://github.com/PaoloRotolo/AppIntro</string>
    <string name="credits_appintro_license">Under License Apache v2</string>
    <string name="credits_ss_label">Swipe Selector</string>
    <string name="credits_ss_desc">Library made by Iiro Krankka</string>
    <string name="credits_ss_url">https://github.com/roughike/SwipeSelector</string>
    <string name="credits_ss_license">Under License Apache v2</string>
    <string name="credits_msbp_label">Material SeekBar Preference</string>
    <string name="credits_msbp_desc">Library made by Pavel Sikun</string>
    <string name="credits_msbp_url">https://github.com/MrBIMC/MaterialSeekBarPreference</string>
    <string name="credits_msbp_license">Under License Apache v2</string>
    <string name="credits_dexter_label">Dexter</string>
    <string name="credits_dexter_desc">Library made by Karumi</string>
    <string name="credits_dexter_url">https://github.com/Karumi/Dexter</string>
    <string name="credits_dexter_license">Under License Apache v2</string>
    <string name="credits_icon_flaticon_freepik_label">Icons</string>
    <string name="credits_icon_flaticon_freepik_desc">Icons made by Freepik from www.flaticon.com</string>
    <string name="credits_icon_flaticon_freepik_url">http://www.flaticon.com/authors/freepik</string>
    <string name="credits_icon_flaticon_freepik_license">Under Flaticon Basic License</string>
    <string name="credits_icon_flaticon_elegantthemes_label">Icons</string>
    <string name="credits_icon_flaticon_elegantthemes_desc">Icons made by Elegant Themes from www.flaticon.com</string>
    <string name="credits_icon_flaticon_elegantthemes_url">http://www.flaticon.com/authors/elegant-themes</string>
    <string name="credits_icon_flaticon_elegantthemes_license">Under CC 3.0 BY License</string>
    <string name="credits_icon_flaticon_yannick_label">Icons</string>
    <string name="credits_icon_flaticon_yannick_desc">Icons made by Yannick from www.flaticon.com</string>
    <string name="credits_icon_flaticon_yannick_url">http://www.flaticon.com/authors/yannick</string>
    <string name="credits_icon_flaticon_yannick_license">Under CC 3.0 BY License</string>
    <string name="credits_icon_flaticon_vaadin_label">Icons</string>
    <string name="credits_icon_flaticon_vaadin_desc">Icons made by Vaadin from www.flaticon.com</string>
    <string name="credits_icon_flaticon_vaadin_url">http://www.flaticon.com/authors/vaadin</string>
    <string name="credits_icon_flaticon_vaadin_license">Under License CC 3.0 BY</string>
    <string name="splashscreen_description">Smooth Clicker</string>
    <string name="notif_content_title">Smooth Clicker</string>
    <string name="notif_content_text_click_made">New click </string>
    <string name="notif_content_text_clicks_on_going_app">The click process is running (through the app)&#8230; </string>
    <string name="notif_content_text_clicks_on_going_service">The click process is running (through the service)&#8230; </string>
    <string name="notif_content_text_clicks_on_going_standalone">The click process is running (standalone)&#8230;</string>
    <string name="notif_content_text_clicks_stop">The click process has been stopped</string>
    <string name="notif_content_text_clicks_over">The click process is over</string>
    <string name="notif_content_text_su_granted">The super-user permission has been granted</string>
    <string name="notif_content_text_countdown">Start in:</string>
    <string name="notif_content_text_watch_over">The watch process is over</string>
    <string name="pref_settings_title">Main</string>
    <string name="pref_settings_shaketoclean_title">Shake to clean</string>
    <string name="pref_settings_shaketoclean_summary">Shake your device to make the configuration empty</string>
    <string name="pref_picture_recognition_title">Screen recognition</string>
    <string name="pref_settings_prthreshold_title">Threshold</string>
    <string name="pref_settings_prthreshold_summary">The more the threshold is, the more accepted are the differences between the trigger picture and the last screen-shot made</string>
    <string name="pref_settings_prfrequency_title">Time for capture</string>
    <string name="pref_settings_prfrequency_summary">The higher is the time for the capture, the slower will be the system to take screen shots of the device to trigger the click process</string>
    <string name="pref_credits_title">Credits</string>
    <string name="pref_key_credit_title">This app uses third party contents</string>
    <string name="pref_key_credit_summary">Click here to show the licenses</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_subtitle">Smooth Clicker</string>
    <string name="pref_about_summary">Click to get more</string>
    <string name="pref_about_version_title">Version</string>
    <string name="pref_about_version_app_title">Smooth Clicker</string>
    <string name="pref_about_version_app_summary">written by pylapp - License MIT</string>
    <string name="pref_play_store_title">Google Play</string>
    <string name="pref_play_store_summary">&#9733; Feel free to rate and comment the app &#9733;</string>
    <string name="pref_wakescreenbattery_title">Awake and battery</string>
    <string name="pref_key_wakelock_title">Wakelock</string>
    <string name="pref_key_wakelock_summary">Use wakelocks to make the device always screen on (can reduce a lot the battery)</string>
    <string name="pref_key_forcescreenon_battery_title">Force screen on</string>
    <string name="pref_key_forcescreenon_battery_summary">When the screen is off, turn it on if the device uses its battery and not the power supply</string>
    <string name="pref_unlockscript_title">Unlock</string>
    <string name="pref_key_unlockscript_title">ADB script</string>
    <string name="pref_key_unlockscript_summary">Use a dedicated custom script having system commands to unlock the device</string>
</resources>