<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2016 Pierre-Yves Lapersonne (aka. "pylapp",  pylapp(dot)pylapp(at)gmail(dot)com)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<!-- ✿✿✿✿ ʕ •ᴥ•ʔ/ ︻デ═一 -->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorMisterGrey"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".views.ClickerActivity"
        android:id="@+id/myMainLayout">

    <!-- FIXME Too heavy, populate the linear layout programmatically ? -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ************************* -->
        <!-- Row 1 : the type of start -->
        <!-- ************************* -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_type_of_start"
                    android:textColor="@color/colorAccent"/>

                <Switch
                    android:id="@+id/sTypeOfStartDelayed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textOn="@string/widget_delayed_starts"
                    android:textOff="@string/widget_immediate_starts"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ***************** -->
        <!-- Row 2 : the delay -->
        <!-- ***************** -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_delay"
                    android:textColor="@color/colorAccent"/>

                <EditText
                    android:id="@+id/etDelay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="@string/widget_delay_hint"
                    android:inputType="number"
                    android:maxLength="3"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ***************** -->
        <!-- Row 3 : the speed -->
        <!-- ***************** -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_speed"
                    android:textColor="@color/colorAccent"/>

                <EditText
                    android:id="@+id/etTimeBeforeEachClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="@string/widget_speed_hint"
                    android:inputType="number"
                    android:maxLength="3"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ****************** -->
        <!-- Row 4 : the repeat -->
        <!-- ****************** -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_repeat"
                    android:textColor="@color/colorAccent"/>

                <EditText
                    android:id="@+id/etRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="@string/widget_speed_hint"
                    android:inputType="number"
                    android:maxLength="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_repeat_endless"
                    android:textColor="@color/colorAccent"/>

                <CheckBox
                    android:id="@+id/cbEndlessRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ********************************** -->
        <!-- Row 5 : the vibrate mode on starts -->
        <!-- ********************************** -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_vibrate_on_start"
                    android:textColor="@color/colorAccent"/>

                <CheckBox
                    android:id="@+id/cbVibrateOnStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ********************************* -->
        <!-- Row 6 : the vibrate mode on click -->
        <!-- ********************************* -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_vibrate_on_click"
                    android:textColor="@color/colorAccent"/>

                <CheckBox
                    android:id="@+id/cbVibrateOnClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ********************************* -->
        <!-- Row 7 : display the notifications  -->
        <!-- ********************************* -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_notifications"
                    android:textColor="@color/colorAccent"/>

                <CheckBox
                    android:id="@+id/cbNotifOnClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- ************************** -->
        <!-- Row 8 : the list of points -->
        <!-- *************************** -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/widget_xy_coordinates"
                    android:textColor="@color/colorAccent"/>

                <Spinner
                    android:id="@+id/sPointsToClick"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</ScrollView>
